--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Ryan Mathur</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, my personal website to promote myself as an Android Developer.</p>
+							<p>And this is my personal website to promote myself as an Android Developer.</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -49,7 +49,7 @@
 				<article id="work">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>Android Development Project Work.</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -149,7 +149,7 @@
 			<div class="wrapper style4">
 				<article id="contact" class="container 75%">
 					<header>
-						<h2>Have me make stuff for you.</h2>
+						<h2>Feel free to contact me for questions or to network!</h2>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
 					</header>
 					<div>
