--- a/index.html
+++ b/index.html
@@ -101,15 +101,14 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/Webp.net-gifmaker.gif" alt="" /></a>
 									<h3><a href="#">PokeYelp</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<p>This is an Android Application I worked on with other members of General Assembly for a group project. It is our take on what Pokemon Go should have been. In this App, you use the search function to find businesses using the Yelp API. When you select an individual store, you are given the ability to "scan" for a pokemon. When the pokemon appears at the store, it will remain there for an entire day (or 30 minutes in this test version). The user will need to physically go to the store, or very near it, to be able to capture the pokemon.</p>
 								</article>
 							</div>
 							
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#contact" class="button big scrolly">Get in touch with me</a>
 					</footer>
 				</article>
