--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/AdoptifyScreen1.jpg" alt="" /></a>
 									<h3><a href="#">Adoptify</a></h3>
 									<p>This Android Application allows users to see animals available for adoption near them.</p>
 								</article>
