--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="https://www.linkedin.com/in/ryan-mathur/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ryan-mathur/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
