--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div>
 						<div class="row">
 							<div class="12u">
-								<form method="post" action="#">
+								<form method="post" action=""https://formspree.io/ryanmathur7@gmail.com">
 									<div>
 										<div class="row">
 											<div class="6u 12u(mobile)">
