--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-comments-o"></span>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+									<span class="image featured"><img src="images/androidicon.png"></span>
+									<h3>Android Development</h3>
+									<p>I can make Android Applications.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
