--- a/index.html
+++ b/index.html
@@ -63,15 +63,8 @@
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<span class="icon featured fa-camera-retro"></span>
-									<h3>Lorem dolor tempus</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
-									<span class="icon featured fa-thumbs-o-up"></span>
-									<h3>Feugiat posuere</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+									<h3>IT Consulting</h3>
+									<p>I have worked in numerous positions in IT and have worked with many businesses as a IT Consultant.</p>
 								</section>
 							</div>
 						</div>
