--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
 									<p>This is an Android Application I worked on with other members of General Assembly for a group project. It is our take on what Pokemon Go should have been. In this App, you use the search function to find businesses using the Yelp API. When you select an individual store, you are given the ability to "scan" for a pokemon. When the pokemon appears at the store, it will remain there for an entire day (or 30 minutes in this test version). The user will need to physically go to the store, or very near it, to be able to capture the pokemon.</p>
 								</article>
 							</div>
-							
+							<div class="4u 12u(mobile)">
+ 								<section class="box style1">
+ 									<span class="icon featured fa-thumbs-o-up"></span>
+ 									<h3>Feugiat posuere</h3>
+ 									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+  								</section>
+  							</div>
 					</div>
 					<footer>
 						<a href="#contact" class="button big scrolly">Get in touch with me</a>
