--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 									<h3>IT Consulting</h3>
 									<p>I have worked in numerous positions in IT and have worked with many businesses as a IT Consultant.</p>
 								</section>
+							</div>
 							<div class="4u 12u(mobile)">
  								<section class="box style1">
  									<span class="icon featured fa-thumbs-o-up"></span>
