--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 								<section class="box style1">
 									<span class="image featured"><img src="images/androidicon.png"></span>
 									<h3>Android Development</h3>
-									<p>I can make Android Applications.</p>
+									<p>I can make Android Applications. Please see some of my projects below!</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-camera-retro"></span>
+									<span class="icon featured><img src="images/IT Consulting.jpg"></span>
 									<h3>IT Consulting</h3>
 									<p>I have worked in numerous positions in IT and have worked with many businesses as a IT Consultant.</p>
 								</section>
