--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="image featured><img src="images/IT Consulting.jpg"></span>
+									<span class="image featured"><img src="images/IT Consulting.jpg"></span>
 									<h3>IT Consulting</h3>
 									<p>I have worked in numerous positions in IT and have worked with many businesses as a IT Consultant.</p>
 								</section>
